[package]
name = "demo"
version = "0.0.0"
description  = "Library demo"
authors = ["Sean Fisk <sean@seanfisk.com>"]
edition = "2018"

[dependencies]
log = "0.4"
env_logger = "0.8"
anyhow = "1.0"

[dependencies.user-defaults]
path = ".."

# This demo needs to be a crate and not an example due to the requirement of being built as an app bundle to work correctly with macOS' user defaults system

[package.metadata.bundle]
identifier = "com.vmware.user-defaults"
category = "Developer Tool"
osx_minimum_system_version = "10.10"
